Future version (tbd)
 * Require only MODIFY permission on base when updating table with MV (STAR-564)


5.0.4
 * Update netty to 4.1.119.Final and netty-tcnative to 2.0.70.Final (CASSANDRA-20314)
 * Serialization can lose complex deletions in a mutation with multiple collections in a row (CASSANDRA-20449)
 * Improve error messages when initializing auth classes (CASSANDRA-20368)
 * Prioritize legacy 2i over SAI for columns with multiple indexes (CASSANDRA-20334)
 * Ensure only offline tools can build IntervalTrees without first/last key fields (CASSANDRA-20407)
 * Improve disk access patterns during compaction and range reads (CASSANDRA-15452)
 * Improve IntervalTree build throughput (CASSANDRA-19596)
 * Avoid limit on RFP fetch in the case of an unresolved static row (CASSANDRA-20323)
 * Include materialized views to the output of DESCRIBE TABLE statements (CASSANDRA-20365)
 * Heap and GC jvm flags improvements (CASSANDRA-20296)
 * Fix unparseable YAML in default cassandra.yaml when uncommented for downstream tooling (CASSANDRA-20359)
 * Avoid fetching entire partitions on unresolved static rows in RFP when no static column predicates exist (CASSANDRA-20243)
 * Avoid indexing empty values for non-literals and types that do not allow them (CASSANDRA-20313)
 * Fix incorrect results of min / max in-built functions on clustering columns in descending order (CASSANDRA-20295)
 * Avoid possible consistency violations for SAI intersection queries over repaired index matches and multiple non-indexed column matches (CASSANDRA-20189)
 * Skip check for DirectIO when initializing tools (CASSANDRA-20289)
 * Avoid under-skipping during intersections when an iterator has mixed STATIC and WIDE keys (CASSANDRA-20258)
 * Correct the default behavior of compareTo() when comparing WIDE and STATIC PrimaryKeys (CASSANDRA-20238)
Merged from 4.1:
 * Fix mixed mode paxos ttl commit hang (CASSANDRA-20514)
 * Fix paxos mixed mode infinite loop (CASSANDRA-20493)