@@ -821,6 +821,7 @@ public interface StorageServiceMBean extends NotificationEmitter
     @Deprecated(since = "4.1")
     public int getCompactionThroughputMbPerSec();
     public void setCompactionThroughputMbPerSec(int value);
+    Map<String, String> getCurrentCompactionThroughputMebibytesPerSec();
 
     public int getCompressedReadAheadBufferInKB();
     public void setCompressedReadAheadBufferInKB(int sizeInKb);
